[tool.poetry]
name = "marge"
version = "0.12.1"
description = "Marge-bot is a merge-bot for GitLab that, beside other goodies, implements [the Not Rocket Science Rule Of Software Engineering](http://graydon2.dreamwidth.org/1597.html)."
license = "BSD-3-Clause"
authors = ["Infrastructure <infrastructure@smarkets.com>"]
readme = "README.md"
repository = "https://github.com/hiboxsystems/marge-bot"
keywords = ["merge request", "gitlab"]

[tool.poetry.dependencies]
python = "^3.7"
ConfigArgParse = "^1.3"
maya = "^0.6.1"
PyYAML = "~5.3.1"
requests = "^2.25.1"
retry2 = "^0.9.2"
tzdata = "^2022.7"

[tool.poetry.dev-dependencies]
pytest = "~7"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-pylint = "^0.19.0"
flake8 = "^4"

[tool.poetry.scripts]
marge = "marge.__main__:run"
"marge.app" = "marge.__main__:run"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
