[tool.poetry]
name = "marge"
version = "0.16.0"
description = "Marge-bot is a merge-bot for GitLab that, beside other goodies, implements [the Not Rocket Science Rule Of Software Engineering](http://graydon2.dreamwidth.org/1597.html)."
license = "BSD-3-Clause"
authors = ["Infrastructure <infrastructure@smarkets.com>"]
readme = "README.md"
repository = "https://github.com/hiboxsystems/marge-bot"
keywords = ["merge request", "gitlab"]

[tool.poetry.dependencies]
python = "^3.9"
ConfigArgParse = "^1.3"
maya = "^0.6.1"
PyYAML = "~5.3.1"
requests = "^2.25.1"
retry2 = "^0.9.2"
tzdata = "^2022.7"

[tool.poetry.group.dev.dependencies]
pytest = "~7"
pytest-cov = "^4.0.0"
pylint = "^3.0.3"
flake8 = "^7"
pendulum = {extras = ["test"], version = "^3.0.0"}

[tool.poetry.scripts]
marge = "marge.__main__:run"
"marge.app" = "marge.__main__:run"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
